--- a/Project.toml
+++ b/Project.toml
@@ -1,2 +1,7 @@
+name = "End-to-end-hint3"
+authors = ["Ziyi Yin and Rafael Orozco"]
+[compat]
+julia = "1.7.2"
+DrWatson = "2.11.1"
 [deps]
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
