--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,13 @@
 name = "End-to-end-hint3"
 authors = ["Ziyi Yin and Rafael Orozco"]
-[compat]
-julia = "1.7.2"
-DrWatson = "2.11.1"
+
 [deps]
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
+Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
+JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
+MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
+PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
+
+[compat]
+DrWatson = "2.11.1"
+julia = "1.7.2"
