--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ ImageQualityIndexes = "2996bd0c-7a13-11e9-2da2-2f5ce47296a9"
 InvertibleNetworks = "b7115f24-5f92-4794-81e8-23b0ddb121d3"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
+ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
 UNet = "0d73aaa9-994a-4556-95d0-da67cb772a03"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
