--- a/Project.toml
+++ b/Project.toml
@@ -4,13 +4,16 @@ authors = ["Ziyi Yin and Rafael Orozco"]
 [deps]
 BSON = "fbb218c0-5317-5bc6-957e-2ee96dd4b1f0"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
+FNO4CO2 = "4f87af30-b322-4a0d-8c7c-fe8b2256665a"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 ImageQualityIndexes = "2996bd0c-7a13-11e9-2da2-2f5ce47296a9"
 InvertibleNetworks = "b7115f24-5f92-4794-81e8-23b0ddb121d3"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
+JUDI = "f3b833dc-6b2e-5b9c-b940-873ed6319979"
 MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
+SlimPlotting = "f6d04670-764e-495b-a720-91c3c9a588ff"
 UNet = "0d73aaa9-994a-4556-95d0-da67cb772a03"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
