--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,7 @@ MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
 SlimPlotting = "f6d04670-764e-495b-a720-91c3c9a588ff"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 UNet = "0d73aaa9-994a-4556-95d0-da67cb772a03"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
